# yakf

./: CMakeLists.txt  ExtendedKalmanFilter.h  NumericalIntegration.h  README.md
playground/: CMakeLists.txt  main.cpp
playground/python/: kalman_test_xyvt.ipynb
test/: ExtendedKalmanFilterTest.cpp  NumericalIntegrationTest.cpp
